--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <a href="assignment2.html">Assignment2</a>
+
     <h1><strong>World Wide Web General</strong></h1>
     <ol>
         <li>
@@ -68,6 +71,7 @@
         <li><u>How to mark up important ext and how is it displayed in the browser?</u></li>
         <p>With the < strong> tag</p>
     </ol>
+
 </body>
 
 </html>
