--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-
-    <a href="assignment2.html">Assignment2</a>
+        <div class="nav">
+                <a class="active"href="CheatSheet.html">Assignment</a>
+                <a href="assignment2.html">Assignment2</a>
+            </div>
+    
 
     <h1><strong>World Wide Web General</strong></h1>
     <ol>
