--- a/assignment2.html
+++ b/assignment2.html
@@ -14,7 +14,7 @@
     <div class="nav">
         <a href="CheatSheet.html">Assignment</a>
         <a class="active" href="assignment2.html">Assignment2</a>
-
+        <p id ="heading">Assignment 2</p>
     </div>
 
 
