--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -13,6 +13,7 @@
         <div class="nav">
                 <a class="active"href="CheatSheet.html">Assignment</a>
                 <a href="assignment2.html">Assignment2</a>
+                <p id ="heading">Assignment 1</p>
             </div>
     
 
